Showing format initial.
1. Need add predict list
2. Add guess algorithm

--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Yooo</title>
+		<title>Wordle 幫你猜</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<p>這是一個給懶人使用，幫忙猜wordle 遊戲的懶人網站</p>
+		<p>這個網站只能幫你猜今天的單字，沒有報明牌的功能</p>
+		<h1>使用方法：</h1>
+		<hr>
+		<p>1. 第一行輸入你猜的文字</p>
+		<p>2. 第二行依照以下規則輸入wordle 的結果</p>
+		<table style="border:3px #cccccc solid;" cellpadding="10" border='1'>
+			<tr>
+				<td>符號</td>
+				<td>意思</td>
+			</tr>
+			<tr>
+				<td>+</td>
+				<td>綠色：有此文字且位於<b>正確位置</b>！</td>
+			</tr>
+			<tr>
+				<td>?</td>
+				<td>黃色：有此文字但位於<b>錯誤</b>位置！</td>
+			</tr>
+			<tr>
+				<td>*</td>
+				<td>灰色：<b>無此文字</b></td>
+			</tr>
+		</table>
+		<hr>
+		<label for="guess">你猜的文字：</label>
+		<input type="text" id="guess" name="guess_var" maxlength="5" size="5"><br><br>
+		<label for="result">猜的結果：</label>
+		<input type="text" id="result" name="result_var" maxlength="5" size="5">
+		<input type="button" value="幫我猜！" onclick="CheatIt()">
+		<script>
+			function CheatIt()
+			{
+				var guess_str = document.getElementById('guess').value
+				var guess_number = 1234
+				alert("你猜的文字是：" + guess_str + "\n目前共計算出有：" + guess_number + " 種結果 \n請依照顯示清單再次嘗試！\n還沒寫好啦其實ㄏㄏ")
+				
+			}
+		</script>
+		
+		
 	</body>
 </html>
