add show in console.log

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 				})
 				str += "</ul>"
 				document.getElementById("slideContainer").innerHTML = str
-				document.getElementById("slideContainer").innerHTML = "<font size='5'>預測的結果：" + get_list.length + "</font>"
+				console.log(get_list)
+				document.getElementById("slideNumber").innerHTML = "<font size='5'>預測的結果：" + get_list.length + "</font>"
 			}
 		</script>
 		
